# protein-knot-analyzer

./: .cproject  .project  CMakeLists.txt  README.md
UI/: 2cab_test1_000000.stp  2cab_test1_000001.stp  2cab_test1_000018.stp  2cab_test1_000019.stp  2cab_test1_000020.stp  2cab_test1_000021.stp  2cab_test1_000022.stp  2cab_test1_000023.stp  2cab_test1_000024.stp  2cab_test1_000025.stp  2cab_test1_000026.stp  2cab_test1_000027.stp  2cab_test1_000028.stp  2cab_test1_000029.stp  2cab_test1_000030.stp  protein-knot-settings.json
commandLine/: 2cab-0.stp  2cab-1.stp  2cab-10.stp  2cab-11.stp  2cab-12.stp  2cab-13.stp  2cab-14.stp  2cab-15.stp  2cab-16.stp  2cab-17.stp  2cab-18.stp  2cab-19.stp  2cab-2.stp  2cab-20.stp  2cab-3.stp  2cab-4.stp  2cab-5.stp  2cab-6.stp  2cab-7.stp  2cab-8.stp  2cab-9.stp
include/proteinKnotAnalyzer/: amalgamated.h  occView.h
include/proteinKnotDetector/: TaylorKnotAlgorithm.h  amalgamated.h  config.h
resources/: occqt.qrc
src/proteinKnotAnalyzer/: amalgamated.cpp  occView.cpp
src/proteinKnotAnalyzerUI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  occQt.ui
src/proteinKnotDetector/: TaylorKnotAlgorithm.cpp  amalgamated.cpp
src_UI/: protein-knot-analyzer.cpp
